# hello-hs

./: .gitignore  CHANGELOG.md  Makefile  cabal.project  embed  flake.nix  georgefstris.cabal  hello-hs.cabal
app/: Georgefstris.hs  Instance.hs  Lib.hs  Main.hs
app/Georgefstris/: Miso.hs
static/: index.html
