cabal-version: 3.0
name: hello-hs
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

executable hello-hs
    main-is: Main.hs
    hs-source-dirs: app
    default-language: GHC2021
    ghc-options:
        -Wall
    other-modules:
        Util.OpenWeatherMap
        Util.Secrets
        Util.Spotify
        Util.TFL
        Util.TFLMiso
        Util.TFLTypes
    build-depends:
        base >=4.14,
        aeson,
        bytestring,
        containers,
        extra,
        ghc-experimental,
        jsaddle,
        miso,
        mtl,
        optics,
        servant,
        servant-client-js,
        servant-flatten,
        spotify,
        spotify:spotify-servant,
        template-haskell,
        text,
        time,
        transformers,
