cabal-version: 3.0
name: hello-hs
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

flag interactive
  default: False
  manual: True

executable hello-hs
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Util.MisoAesonDeriving
    default-language: GHC2021
    ghc-options:
        -Wall
    build-depends:
        base >=4.14,
        aeson,
        miso-aeson,
        miso,
    if arch(wasm32)
        ghc-options:
            -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
        cpp-options:
            -DWASM
        if flag(interactive)
            cpp-options:
                -DINTERACTIVE
