cabal-version: 3.0
name: hello-hs
version: 0.1.0.0
license-file: LICENSE
author: George Thomas
maintainer: georgefsthomas@gmail.com

flag interactive
  default: False
  manual: True

executable hello-hs
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Util.FixedLengthQueue
        Util.MisoAesonDeriving
        Util.MisoOptics
        Util.Shuffle
        Util.Util
    default-language: GHC2024
    default-extensions:
        BlockArguments
        CPP
        DeriveAnyClass
        DerivingVia
        DuplicateRecordFields
        LexicalNegation
        OrPatterns
        OverloadedLabels
        OverloadedRecordDot
        PartialTypeSignatures
        OverloadedStrings
        RecordWildCards
        ViewPatterns
        NoFieldSelectors
    ghc-options:
        -Wall
    build-depends:
        base >=4.14,
        aeson,
        colour,
        containers,
        extra,
        generic-optics,
        linear,
        massiv,
        miso-aeson,
        miso,
        mtl,
        optics-operators,
        optics,
        random,
        safe,
        text,
        time,
        unordered-containers,
    if arch(wasm32)
        ghc-options:
            -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
        cpp-options:
            -DWASM
        if flag(interactive)
            cpp-options:
                -DINTERACTIVE
